--- a/index.html
+++ b/index.html
@@ -55,16 +55,18 @@
 <main>
     <section class="section containerHero" id="section__hero">
         <article class="containerHero__wrapper containerHero__wrapper--text">
-            <h1 class="containerHero__title">ADRIAN BECE</h1>
-            <ul class="containerHero__list">
-                <li>Frontend Developer</li>
-                <li>Certified Magento Developer</li>
-                <li>Loves Rock and Metal Music</li>
-                <li>Reads Sci-fi Books</li>
-                <li>Adores Calvin & Hobbes Comics</li>
-                <li>Aspiring Air Pistol Marksman</li>
-            </ul>
-            <a class="button button-cta containerHero__button" href="#">Read My CV <span class="icon button__icon">&#xe800;</span></a>
+            <div>
+                <h1 class="containerHero__title">ADRIAN BECE</h1>
+                <ul class="containerHero__list">
+                    <li>Frontend Developer</li>
+                    <li>Certified Magento Developer</li>
+                    <li>Loves Rock and Metal Music</li>
+                    <li>Reads Sci-fi Books</li>
+                    <li>Adores Calvin & Hobbes Comics</li>
+                    <li>Aspiring Air Pistol Marksman</li>
+                </ul>
+                <a class="button button-cta containerHero__button" href="#">Read My CV <span class="icon button__icon">&#xe800;</span></a>
+            </div>
         </article>
         <article class="containerHero__wrapper containerHero__wrapper--imageContainer">
             <div class="containerHero__background"></div>
@@ -133,7 +135,7 @@
         </article>
     </section>
     <section class="section containerWork" id="section__work">
-        <h2 class="containerWork__title">Featured Professional Work And Personal Projects</h2>
+        <h2 class="containerWork__title">Featured Work &amp; Projects</h2>
         <article class="containerWork__wrapper containerWork__containerToggle">
             <ul class="containerWork__list" id="containerWork">
                 <li class="containerWork__card">
@@ -277,7 +279,7 @@
                 <li><a href="#">KEH Camera</a></li>
                 <li><a href="#">O'Neills</a></li>
                 <li><a href="#">AntiAgression</a></li>
-                <li><a href="http://inchoo.net/author/adrian-bece/profile/">My Articles</a></li>
+                <li><a href="#">Zee & Co Style</a></li>
             </ul>
         </div>
         <div>
