Update fonts and responsive adjustments

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         </ul>
         <ul class="navigation__linksList navigation__linksList--socialMedia">
             <li><a class="navigation__link" target="_blank" rel="noopener noreferrer"
-                   href="https://twitter.com/AdrianBDesigns"><span class="navigation__icon icon">&#xf099;</span></a>
+                   href="https://twitter.com/AdrianBDesigns"><span class="navigation__icon icon icon-twitter"></span></a>
             </li>
             <li><a class="navigation__link" target="_blank" rel="noopener noreferrer"
                    href="https://www.linkedin.com/in/adrianbece/"><span
-                    class="navigation__icon icon">&#xf0e1;</span></a></li>
+                    class="navigation__icon icon icon-linkedin"></span></a></li>
             <li><a class="navigation__link" target="_blank" rel="noopener noreferrer"
-                   href="https://github.com/codeAdrian"><span class="navigation__icon icon">&#xf09b;</span></a></li>
-            <li><a class="navigation__link" href="mailto:adrianbece@live.com"><span class="navigation__icon icon">&#xf0e0;</span></a>
+                   href="https://github.com/codeAdrian"><span class="navigation__icon icon icon-github"></span></a></li>
+            <li><a class="navigation__link" href="mailto:adrianbece@live.com"><span class="navigation__icon icon icon-mail"></span></a>
             </li>
         </ul>
     </nav>
@@ -65,7 +65,7 @@
                     <li>Adores Calvin & Hobbes Comics</li>
                     <li>Aspiring Air Pistol Marksman</li>
                 </ul>
-                <a class="button button-cta containerHero__button" href="#">Read My CV <span class="icon button__icon">&#xe800;</span></a>
+                <a class="button button-cta containerHero__button" href="#">Read My CV <span class="icon button__icon icon-right-dir"></span></a>
             </div>
         </article>
         <article class="containerHero__wrapper containerHero__wrapper--imageContainer">
@@ -83,28 +83,28 @@
         </article>
     </section>
     <section class="containerFeatures" id="containerFeatures">
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xe802;</span></span>
+        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-basket"></span></span>
             <h3 class="containerFeatures__title">eCommerce Development</h3>
             <div>
                 I've been working on development, maintenance and improvement of multiple Magento and Magento 2 projects for the last 3 years ranging from
                 small-scale websites to multi-store enterprise websites.
             </div>
         </article>
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xf2d0;</span></span>
+        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-css3"></span></span>
             <h3 class="containerFeatures__title">Frontend Development</h3>
             <div>
                 I strive to keep up with the latest trends in Frontend development and selectively use the proven
                 technologies and frameworks to improve my workflow and deliver higher quality code.
             </div>
         </article>
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xf2d0;</span></span>
+        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-cog"></span></span>
             <h3 class="containerFeatures__title">JavaScript Development</h3>
             <div>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
                 gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
             </div>
         </article>
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xe803;</span></span>
+        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-doc"></span></span>
             <h3 class="containerFeatures__title">Frontend &amp; UX Audits</h3>
             <div>
                 I have experience in analysing the websites from technical aspect and UX aspect and writing detailed report
@@ -252,9 +252,9 @@
             </ul>
             <div class="containerWork__buttonWrapper">
                 <button onclick="codeAdrianShowMore.toggle(this);" class="button button-cta">
-                    Show <span class="button__text--default">more</span> <span class="button__text--default">less</span> projects
-                    <span class="icon button__text--default button__icon">&#xe801;</span>
-                    <span class="icon button__text--default button__icon">&#xe801;</span>
+                    Show <span class="button__text--default">more</span> <span class="button__text--extended">less</span> projects
+                    <span class="icon button__text--default button__icon--default icon-down-dir"></span>
+                    <span class="icon button__text--default button__icon--extended icon-up-dir"></span>
                 </button>
             </div>
         </article>
@@ -295,7 +295,7 @@
     </div>
     <div class="footer__info">
         <p>
-            Designed and made with <span class="icon">&#xe804;</span> by Adrian Bece
+            Designed and made with <span class="icon-heart"></span> by Adrian Bece
         </p>
         <p>
             Created using HTML, CSS, Sass, JS.
