--- a/index.html
+++ b/index.html
@@ -83,32 +83,44 @@
         </article>
     </section>
     <section class="containerFeatures" id="containerFeatures">
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-basket"></span></span>
-            <h3 class="containerFeatures__title">eCommerce Development</h3>
-            <div>
-                I've been working on development, maintenance and improvement of multiple Magento and Magento 2 projects for the last 3 years ranging from
-                small-scale websites to multi-store enterprise websites.
+        <article class="containerFeatures__wrapper">
+            <div class="containerFeatures__inner">
+                <span class="containerFeatures__iconWrapper"><span class="icon icon-basket"></span></span>
+                <h3 class="containerFeatures__title">eCommerce Development</h3>
+                <div>
+                    I've been working on development, maintenance and improvement of multiple Magento and Magento 2 projects for the last 3 years ranging from
+                    small-scale websites to multi-store enterprise websites.
+                </div>
             </div>
         </article>
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-css3"></span></span>
-            <h3 class="containerFeatures__title">Frontend Development</h3>
-            <div>
-                I strive to keep up with the latest trends in Frontend development and selectively use the proven
-                technologies and frameworks to improve my workflow and deliver higher quality code.
+        <article class="containerFeatures__wrapper">
+            <div class="containerFeatures__inner">
+                <span class="containerFeatures__iconWrapper"><span class="icon icon-css3"></span></span>
+                <h3 class="containerFeatures__title">Frontend Development</h3>
+                <div>
+                    I strive to keep up with the latest trends in Frontend development and selectively use the proven
+                    technologies and frameworks to improve my workflow and deliver higher quality code.
+                </div>
             </div>
         </article>
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-cog"></span></span>
-            <h3 class="containerFeatures__title">JavaScript Development</h3>
-            <div>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
-                gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
+        <article class="containerFeatures__wrapper">
+            <div class="containerFeatures__inner">
+                <span class="containerFeatures__iconWrapper"><span class="icon icon-cog"></span></span>
+                <h3 class="containerFeatures__title">JavaScript Development</h3>
+                <div>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
+                    gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
+                </div>
             </div>
         </article>
-        <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon icon-doc"></span></span>
-            <h3 class="containerFeatures__title">Frontend &amp; UX Audits</h3>
-            <div>
-                I have experience in analysing the websites from technical aspect and UX aspect and writing detailed report
-                addressing critical issues and providing solution suggestions.
+        <article class="containerFeatures__wrapper">
+            <div class="containerFeatures__inner">
+                <span class="containerFeatures__iconWrapper"><span class="icon icon-doc"></span></span>
+                <h3 class="containerFeatures__title">Frontend &amp; UX Audits</h3>
+                <div>
+                    I have experience in analysing the websites from technical aspect and UX aspect and writing detailed report
+                    addressing critical issues and providing solution suggestions.
+                </div>
             </div>
         </article>
     </section>
