--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 <span class="containerFeatures__iconWrapper"><span class="icon icon-css3"></span></span>
                 <h3 class="containerFeatures__title">Frontend Development</h3>
                 <div>
-                    I strive to keep up with the latest trends in Frontend development and selectively use the proven
-                    technologies and frameworks to improve my workflow and deliver higher quality code.
+                    I keep up with the latest trends in Frontend development and selectively use the proven and tested
+                    technologies and frameworks to improve my workflow and deliver higher quality code and optimal performance.
                 </div>
             </div>
         </article>
@@ -108,8 +108,7 @@
                 <span class="containerFeatures__iconWrapper"><span class="icon icon-cog"></span></span>
                 <h3 class="containerFeatures__title">JavaScript Development</h3>
                 <div>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
-                    gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
+                    I use many best practices and patterns while writing JavaScript and JQuery code in order to keep the code DRY and have best possible performance. I am also interested in working with React.
                 </div>
             </div>
         </article>
@@ -118,8 +117,8 @@
                 <span class="containerFeatures__iconWrapper"><span class="icon icon-doc"></span></span>
                 <h3 class="containerFeatures__title">Frontend &amp; UX Audits</h3>
                 <div>
-                    I have experience in analysing the websites from technical aspect and UX aspect and writing detailed report
-                    addressing critical issues and providing solution suggestions.
+                    I have experience in analysing the websites from technical aspect and UX aspect. I am also proficient in writing detailed reports
+                    addressing critical issues and providing solution suggestions as well as implementing them.
                 </div>
             </div>
         </article>
