--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
                             <h3 class="containerWork__cardTitle">Zee & Co</h3>
                             <p>Inchoo Project | Magento</p>
                         </div>
-                        <img src="images/project-zee.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-zee.jpg"/>
+                        </div>
                     </a>
                 </li>
                 <li class="containerWork__card">
@@ -164,7 +166,9 @@
                             <h3 class="containerWork__cardTitle">Zee & Co Blog</h3>
                             <p>Inchoo Project | Wordpress</p>
                         </div>
-                        <img src="images/project-zee-blog.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-zeeBlog.jpg"/>
+                        </div>
                     </a>
                 </li>
                 <li class="containerWork__card">
@@ -173,7 +177,9 @@
                         <h3 class="containerWork__cardTitle">KEH Camera</h3>
                         <p>Inchoo Project | Magento</p>
                     </div>
-                    <img src="images/project-keh.png"/>
+                    <div class="containerWork__imageWrapper">
+                        <img src="images/prj-keh.jpg"/>
+                    </div>
                 </a>
             </li>
                 <li class="containerWork__card">
@@ -182,7 +188,9 @@
                             <h3 class="containerWork__cardTitle">O'Neills</h3>
                             <p>Inchoo Project | Magento</p>
                         </div>
-                        <img src="images/project-oneills.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-oneills.jpg"/>
+                        </div>
                     </a>
                 </li>
                 <li class="containerWork__card">
@@ -191,7 +199,9 @@
                             <h3 class="containerWork__cardTitle">Inchoo</h3>
                             <p>Inchoo Project | Wordpress</p>
                         </div>
-                        <img src="images/project-inchoo.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-inchoo.jpg"/>
+                        </div>
                     </a>
                 </li>
 
@@ -201,7 +211,9 @@
                             <h3 class="containerWork__cardTitle">AntiAgression</h3>
                             <p>Inchoo Project | Magento</p>
                         </div>
-                        <img src="images/project-aa.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-aa.jpg"/>
+                        </div>
                     </a>
                 </li>
 
@@ -211,7 +223,9 @@
                             <h3 class="containerWork__cardTitle">Image 2 ASCII</h3>
                             <p>Personal Project | C#</p>
                         </div>
-                        <img src="images/project-ascii.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-image2ascii.jpg"/>
+                        </div>
                     </a>
                 </li>
 
@@ -221,7 +235,9 @@
                             <h3 class="containerWork__cardTitle">Histogram-Based Search</h3>
                             <p>Personal Project | C#</p>
                         </div>
-                        <img src="images/project-search.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-imageSearch.jpg"/>
+                        </div>
                     </a>
                 </li>
                 <li class="containerWork__card">
@@ -230,7 +246,9 @@
                             <h3 class="containerWork__cardTitle">Hexagonal Melody</h3>
                             <p>Personal Project | C#</p>
                         </div>
-                        <img src="images/project-hex.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-hex.jpg"/>
+                        </div>
                     </a>
                 </li>
                 <li class="containerWork__card">
@@ -239,7 +257,9 @@
                             <h3 class="containerWork__cardTitle">Block Runner Rampage</h3>
                             <p>Personal Project | C#</p>
                         </div>
-                        <img src="images/project-block.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-block.jpg"/>
+                        </div>
                     </a>
                 </li>
                 <li class="containerWork__card">
@@ -248,7 +268,9 @@
                             <h3 class="containerWork__cardTitle">Computer Vision Projects</h3>
                             <p>Personal Project | C++</p>
                         </div>
-                        <img src="images/project-vision.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-vision.jpg"/>
+                        </div>
                     </a>
                 </li>
                 <li class="containerWork__card">
@@ -257,7 +279,9 @@
                             <h3 class="containerWork__cardTitle">Foodly</h3>
                             <p>Personal Project | Web</p>
                         </div>
-                        <img src="images/project-foodly.png"/>
+                        <div class="containerWork__imageWrapper">
+                            <img src="images/prj-foodly.jpg"/>
+                        </div>
                     </a>
                 </li>
             </ul>
