Featured products slider

--- a/index.html
+++ b/index.html
@@ -289,15 +289,9 @@
                     </a>
                 </li>
             </ul>
-            <div class="containerWork__buttonWrapper">
-                <button onclick="codeAdrianShowMore.toggle(this);" class="button button-cta">
-                    Show <span class="button__text--default">more</span> <span class="button__text--extended">less</span> projects
-                    <span class="button__icon button__icon--default icon-down-dir"></span>
-                    <span class="button__icon button__icon--extended icon-up-dir"></span>
-                </button>
-            </div>
         </article>
     </section>
+    <div class="loader"></div>
 </main>
 <footer class="footer containerSecondary containerSecondary--pattern">
     <div class="footer__wrapper">
@@ -317,7 +311,7 @@
                 <li><a href="#">Zee & Co</a></li>
                 <li><a href="#">KEH Camera</a></li>
                 <li><a href="#">O'Neills</a></li>
-                <li><a href="#">AntiAgression</a></li>
+                <li><a href="#">Inchoo</a></li>
                 <li><a href="#">Zee & Co Style</a></li>
             </ul>
         </div>
