--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <article class="containerWork__wrapper containerWork__containerToggle">
             <ul class="containerWork__list" id="containerWork">
                 <li class="containerWork__card">
-                    <a href="#">
+                    <a href="http://zeeandco.co.uk/" target="_blank" rel="noopener noreferrer">
                         <div class="containerSecondary containerSecondary--pattern">
                             <h3 class="containerWork__cardTitle">Zee & Co</h3>
                             <p>Inchoo Project | Magento</p>
@@ -165,7 +165,7 @@
                     </a>
                 </li>
                 <li class="containerWork__card">
-                    <a href="#">
+                    <a href="http://style.zeeandco.co.uk/" target="_blank" rel="noopener noreferrer">
                         <div class="containerSecondary containerSecondary--pattern">
                             <h3 class="containerWork__cardTitle">Zee & Co Blog</h3>
                             <p>Inchoo Project | Wordpress</p>
@@ -176,7 +176,7 @@
                     </a>
                 </li>
                 <li class="containerWork__card">
-                <a href="#">
+                <a href="http://keh.com/" target="_blank" rel="noopener noreferrer">
                     <div class="containerSecondary containerSecondary--pattern">
                         <h3 class="containerWork__cardTitle">KEH Camera</h3>
                         <p>Inchoo Project | Magento</p>
@@ -187,7 +187,7 @@
                 </a>
             </li>
                 <li class="containerWork__card">
-                    <a href="#">
+                    <a href="http://oneills.com/" target="_blank" rel="noopener noreferrer">
                         <div class="containerSecondary containerSecondary--pattern">
                             <h3 class="containerWork__cardTitle">O'Neills</h3>
                             <p>Inchoo Project | Magento</p>
@@ -198,7 +198,7 @@
                     </a>
                 </li>
                 <li class="containerWork__card">
-                    <a href="#">
+                    <a href="http://inchoo.net/" target="_blank" rel="noopener noreferrer">
                         <div class="containerSecondary containerSecondary--pattern">
                             <h3 class="containerWork__cardTitle">Inchoo</h3>
                             <p>Inchoo Project | Wordpress</p>
@@ -210,81 +210,13 @@
                 </li>
 
                 <li class="containerWork__card">
-                    <a href="#">
+                    <a href="http://antiagression.com/" target="_blank" rel="noopener noreferrer">
                         <div class="containerSecondary containerSecondary--pattern">
                             <h3 class="containerWork__cardTitle">AntiAgression</h3>
                             <p>Inchoo Project | Magento</p>
                         </div>
                         <div class="containerWork__imageWrapper">
                             <img src="images/prj-aa.jpg"/>
-                        </div>
-                    </a>
-                </li>
-
-                <li class="containerWork__card">
-                    <a href="#">
-                        <div class="containerSecondary containerSecondary--pattern">
-                            <h3 class="containerWork__cardTitle">Image 2 ASCII</h3>
-                            <p>Personal Project | C#</p>
-                        </div>
-                        <div class="containerWork__imageWrapper">
-                            <img src="images/prj-image2ascii.jpg"/>
-                        </div>
-                    </a>
-                </li>
-
-                <li class="containerWork__card">
-                    <a href="#">
-                        <div class="containerSecondary containerSecondary--pattern">
-                            <h3 class="containerWork__cardTitle">Histogram-Based Search</h3>
-                            <p>Personal Project | C#</p>
-                        </div>
-                        <div class="containerWork__imageWrapper">
-                            <img src="images/prj-imageSearch.jpg"/>
-                        </div>
-                    </a>
-                </li>
-                <li class="containerWork__card">
-                    <a href="#">
-                        <div class="containerSecondary containerSecondary--pattern">
-                            <h3 class="containerWork__cardTitle">Hexagonal Melody</h3>
-                            <p>Personal Project | C#</p>
-                        </div>
-                        <div class="containerWork__imageWrapper">
-                            <img src="images/prj-hex.jpg"/>
-                        </div>
-                    </a>
-                </li>
-                <li class="containerWork__card">
-                    <a href="#">
-                        <div class="containerSecondary containerSecondary--pattern">
-                            <h3 class="containerWork__cardTitle">Block Runner Rampage</h3>
-                            <p>Personal Project | C#</p>
-                        </div>
-                        <div class="containerWork__imageWrapper">
-                            <img src="images/prj-block.jpg"/>
-                        </div>
-                    </a>
-                </li>
-                <li class="containerWork__card">
-                    <a href="#">
-                        <div class="containerSecondary containerSecondary--pattern">
-                            <h3 class="containerWork__cardTitle">Computer Vision Projects</h3>
-                            <p>Personal Project | C++</p>
-                        </div>
-                        <div class="containerWork__imageWrapper">
-                            <img src="images/prj-vision.jpg"/>
-                        </div>
-                    </a>
-                </li>
-                <li class="containerWork__card">
-                    <a href="#">
-                        <div class="containerSecondary containerSecondary--pattern">
-                            <h3 class="containerWork__cardTitle">Foodly</h3>
-                            <p>Personal Project | Web</p>
-                        </div>
-                        <div class="containerWork__imageWrapper">
-                            <img src="images/prj-foodly.jpg"/>
                         </div>
                     </a>
                 </li>
@@ -298,31 +230,31 @@
         <div>
             <h2 class="footer__title">Get In Touch</h2>
             <ul>
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">Email</a></li>
+                <li><a href="https://www.linkedin.com/in/adrianbece/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                <li><a href="https://twitter.com/AdrianBDesigns" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+                <li><a href="https://github.com/codeAdrian" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                <li><a href="mailto:adrianbece@live.com">Email</a></li>
                 <li><a href="http://inchoo.net/author/adrian-bece/profile/">My Articles</a></li>
             </ul>
         </div>
         <div>
             <h2 class="footer__title">Featured Work</h2>
             <ul>
-                <li><a href="#">Zee & Co</a></li>
-                <li><a href="#">KEH Camera</a></li>
-                <li><a href="#">O'Neills</a></li>
-                <li><a href="#">Inchoo</a></li>
-                <li><a href="#">Zee & Co Style</a></li>
+                <li><a href="http://www.zeeandco.co.uk/" target="_blank" rel="noopener noreferrer">Zee & Co</a></li>
+                <li><a href="http://keh.com/" target="_blank" rel="noopener noreferrer">KEH Camera</a></li>
+                <li><a href="https://oneills.com/" target="_blank" rel="noopener noreferrer">O'Neills</a></li>
+                <li><a href="http://inchoo.net/" target="_blank" rel="noopener noreferrer">Inchoo</a></li>
+                <li><a href="http://style.zeeandco.co.uk/" target="_blank" rel="noopener noreferrer">Zee & Co Style</a></li>
             </ul>
         </div>
         <div>
             <h2 class="footer__title">My Latest Articles</h2>
             <ul>
-                <li><a href="http://inchoo.net/magento-2/adding-voice-search-to-magento-2/">Adding Voice Search</a></li>
-                <li><a href="http://inchoo.net/magento-2/bypassing-magento-2-layout-update-restrictions-admin/">Magento 2 admin restrictions</a></li>
-                <li><a href="http://inchoo.net/ecommerce/installing-orocommerce-b2b-application/">Installing OroCommerce</a></li>
-                <li><a href="http://inchoo.net/magento-2/organizing-cms-blocks/">Organizing CMS blocks</a></li>
-                <li><a href="http://inchoo.net/magento-2/improving-accessibility/">eCommerce Accessibility</a></li>
+                <li><a href="http://inchoo.net/magento-2/adding-voice-search-to-magento-2/" target="_blank" rel="noopener noreferrer">Adding Voice Search</a></li>
+                <li><a href="http://inchoo.net/magento-2/bypassing-magento-2-layout-update-restrictions-admin/" target="_blank" rel="noopener noreferrer">Magento 2 admin restrictions</a></li>
+                <li><a href="http://inchoo.net/ecommerce/installing-orocommerce-b2b-application/" target="_blank" rel="noopener noreferrer">Installing OroCommerce</a></li>
+                <li><a href="http://inchoo.net/magento-2/organizing-cms-blocks/" target="_blank" rel="noopener noreferrer">Organizing CMS blocks</a></li>
+                <li><a href="http://inchoo.net/magento-2/improving-accessibility/" target="_blank" rel="noopener noreferrer">eCommerce Accessibility</a></li>
             </ul>
         </div>
     </div>
