--- a/index.html
+++ b/index.html
@@ -125,11 +125,13 @@
     </section>
     <section class="section containerAbout" id="section__about">
         <article class="containerAbout__imagesContainer">
-            <ul id="aboutImageContainer">
-                <li><img src="images/about-me-1.jpg" alt="Image of Adrian Bece in front of Intrepid Fox Club, Athens"/></li>
-                <li><img src="images/about-me-2.jpg" alt="Image of Adrian Bece in front of Intrepid Fox Club, Athens"/></li>
-                <li><img src="images/about-me-3.jpg" alt="Image of Adrian Bece in front of Intrepid Fox Club, Athens"/></li>
-            </ul>
+            <div class="imagesContainer__wrapper">
+                <ul id="aboutImageContainer">
+                    <li><img src="images/about-me-1.jpg" alt="Image of Adrian Bece in front of Intrepid Fox Club, Athens"/></li>
+                    <li><img src="images/about-me-2.jpg" alt="Image of Adrian Bece in front of Intrepid Fox Club, Athens"/></li>
+                    <li><img src="images/about-me-3.jpg" alt="Image of Adrian Bece in front of Intrepid Fox Club, Athens"/></li>
+                </ul>
+            </div>
         </article>
         <article class="containerSecondary containerAbout__textContainer">
             <div>
